# table-ocr-analysis-app

./: .gitignore  BUILD_FIX_NOTES.md  README.md  build.spec  main.py  pyproject.toml  requirements.txt
output/: 1.html  one_page_personal_portfolio_template_presentation_report_infographic_ppt_pdf_document_slide01.html  photo_5100492329834974258_y.html
scripts/: build_exe.ps1  pyi_rth_paddle.py
src/table_scan/: __init__.py  __main__.py  app.py
src/table_scan/config/: __init__.py  settings.py
src/table_scan/core/: __init__.py  excel_writer.py  html_writer.py  http_ocr_engine.py  layout_mapper.py  ocr_engine.py  ocr_factory.py  paddle_ocr_engine.py  pipeline.py  preprocessor.py  table_detector.py  tesseract_paths.py  vlm_ocr_engine.py
src/table_scan/models/: __init__.py  table_result.py
src/table_scan/services/: __init__.py  conversion_service.py
src/table_scan/ui/: __init__.py  main_window.py  workers.py
src/table_scan/ui/styles/: theme.qss
src/table_scan/ui/widgets/: __init__.py  file_list.py  image_preview.py
src/table_scan/utils/: __init__.py  logging_config.py  resource_path.py
tests/: test_excel_and_models.py  test_ocr_layout_and_detection.py
