[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table-scan"
version = "1.2.1"
description = "Desktop app that converts photographed paper tables into Excel workbooks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Table Scan" }]
dependencies = [
    "PySide6>=6.6.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]
paddle = [
    "paddlepaddle==3.2.2",
    "paddleocr==3.6.0",
]

[project.scripts]
table-scan = "table_scan.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
table_scan = ["ui/styles/*.qss"]
